# Linux-ClipBoard

./: .gitignore  LICENSE  README.md  build_snap.sh  package-lock.json  package.json  snapcraft.yaml  tsconfig.app.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: build-snap.yml  manual-snap-build.yml
dist-electron/: index.js  preload.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  db.rs  lib.rs
src/main/: clipboard-watcher.ts  index.ts  ipc-handlers.ts  preload.ts  store.ts
src/renderer/: App.tsx  env.d.ts  index.css  index.html  locales.ts
src/renderer/components/: ClipboardCard.tsx  EmojiPicker.tsx  Settings.tsx  SortableItem.tsx  SymbolPicker.tsx
src/renderer/src/: types.ts
src/renderer/src/lib/: api.ts
src/shared/: types.ts
