[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.3.3"
tauri-plugin-fs = "2.4.4"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-store = "2.4.1"
uuid = { version = "1.19.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = "0.4.42"
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-positioner = { version = "2.3.1", features = ["tray-icon"] }
mouse_position = "0.1.4"
image = "0.25"
base64 = "0.22.1"
tauri-plugin-autostart = "2.5.1"
